# x

./: .gitignore  Cargo.toml  PRINCIPLES.md  README.md  SKILL.md  package.json  rust-rules-of-the-road.md  rustfmt.toml
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/utils/: Cargo.toml
crates/utils/src/: fmt.rs  lib.rs  str.rs
oss-insights/: all-principles.md
oss-insights/facebook/: buck2-insights.md  facebook-insights.md  flow-insights.md  hermes-insights.md  hhvm-insights.md  meta-insights.md  relay-a-insights.md  relay-b-insights.md  relay-c-insights.md  relay-d-insights.md  relay-insights.md  sapling-insights.md
oss-insights/frontend/: frontend-insights.md
oss-insights/oxc/: oxc-insights.md
oss-insights/rolldown/: rolldown-insights.md
oss-insights/wild/: wild-insights.md
