[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["x Contributors"]

[workspace.dependencies]
# Formatting & Linting
oxfmt = "1.0.0"
oxlint-config = "0.1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
once_cell = "1"